--- a/app/sass/goods_details.scss
+++ b/app/sass/goods_details.scss
@@ -64,8 +64,7 @@ header{
      }
 }
 
-section{margin-top: 8vh;width: 200vw;overflow: hidden;padding: 0;transition: all 0.5s;}
-.xiangqing{width: 100vw;float: left;}
+.xiangqing{width: 100vw;float: left;overflow: hidden;}
 .swiper-wrapper .swiper-slide{text-align: center;}
 .goods_information{padding: 2vw;}
 .goods_information .goods_name{color: #333333;font-size: 1em;}
