--- a/app/sass/shoppingcart.scss
+++ b/app/sass/shoppingcart.scss
@@ -4,14 +4,16 @@ header{
     display: flex;
     position: relative;
      background:#8e488e;
-     padding: 15px 0;
      color: #fff;
-     font-size: 16px;
+     font-size: 1em;
      font-weight: 600;
+     height: 7vh;
      justify-content: center;
      align-items: center;
      a{
+         height: 7vh;
          flex: 1;
+         line-height: 7vh;
          text-align:left;
          margin-left: 10px;
          text-decoration: none;
@@ -22,14 +24,18 @@ header{
          flex: 1;
          text-align:left;
          margin-left: 10px;
-         font-size: 22px;
+         font-size: 1.3em;
      }     
      span:nth-child(2){
          flex: 4;
+         height: 7vh;
+         line-height: 7vh;
          text-align: center;
          
      }
      span:last-child{
+         height: 7vh;
+         line-height: 7vh;
          position: relative;
          flex: 1;
          margin-right: 10px;
@@ -52,10 +58,10 @@ header{
                         display: block;
                         font-weight: normal;
                         text-decoration: none;
-                        font-size: 12px;
+                        font-size: 1em;
                         text-align: center;
                         width: 120px;
-                        padding: 10px 0;
+                        padding:0.1em;
                         color: #fff;
                     }
                 }
@@ -90,6 +96,6 @@ section .goods_list li p .iconfont{float: right;border: none;background: white;m
 .footer{width: 100%;height: 40px;position: fixed;bottom: 0;background:#8e488e;font-weight: 600;}
 .footer a{text-decoration: none;float: left;height: 40px; line-height:40px;text-align: center;font-size: 1em;}
 .footer label{float: left; width: 30vw;height: 40px; background: white;color: #333333;position: relative;text-align: center;line-height: 40px;}
-.footer a.pay_way{width: 35vw;background: orangered;color: white;}
+.footer a.pay_way{width: 35vw;background: deeppink;color: white;}
 .footer a.buy{width:35vw;background:#8e488e;color: white;}
 
