--- a/app/css/list.css
+++ b/app/css/list.css
@@ -2,42 +2,44 @@
 /*列表页样式*/
 body, html, ul { list-style: none; height: auto; margin: 0; padding: 0; }
 
-section { /*头部大框架*/ width: 100%; height: 1000px; }
+section.frames { /*头部大框架*/ width: 100vw; height: 1000px; }
 
-section article { /*主题内容*/ padding-top: 39px; width: 100vw; height: auto; background: #f1f5f6; display: flex; }
+section.frames article.content_s { /*主题内容*/ padding-top: 39px; width: 100vw; height: 2000px; background: #f1f5f6; display: flex; }
 
-section article nav { /*左边的导航列表*/ padding-top: 10px; width: 20vw; height: 428px; background: #fff; }
+section.frames article.content_s nav.nav_s { /*左边的导航列表*/ padding-top: 10px; width: 20vw; height: 428px; background: #fff; }
 
-section article nav ul { height: 100%; }
+section.frames article.content_s nav.nav_s ul.nav { height: 100%; }
 
-section article nav ul li { width: 20vw; height: 42px; border-top: 1px solid #f1f5f6; font-size: 14px; text-align: center; line-height: 42px; }
+section.frames article.content_s nav.nav_s ul.nav li { width: 20vw; height: 42px; border-top: 1px solid #f1f5f6; font-size: 14px; text-align: center; line-height: 42px; }
 
-section article nav ul li a { text-decoration: none; color: #3d3d3d; }
+section.frames article.content_s nav.nav_s ul.nav li a { text-decoration: none; color: #3d3d3d; }
 
-section article article { /*ajax请求数据*/ width: 78vw; height: auto; margin-left: 10px; display: flex; background: #fff; padding-top: 10px; flex-direction: column; }
+section.frames article.content_s nav.nav_s ul.nav li a.my_color { color: #ff0000; }
 
-section article article h1 { /*热门推荐标题*/ height: 38px; line-height: 40px; background: #f1f5f6; margin: 0; padding-top: 5px; }
+section.frames article.content_s article.ajax_content { /*ajax请求数据*/ width: 78vw; height: auto; margin-left: 10px; display: flex; background: #fff; padding-top: 10px; flex-direction: column; }
 
-section article article ul { padding-top: 5px; width: auto; height: auto; display: flex; flex-wrap: wrap; justify-content: flex-start; }
+section.frames article.content_s article.ajax_content h1.tip { /*热门推荐标题*/ height: 38px; line-height: 40px; background: #f1f5f6; margin: 0; padding-top: 5px; }
 
-section footer { /*底部列表当前高亮*/ }
+section.frames article.content_s article.ajax_content ul.datalist { padding-top: 5px; width: auto; height: auto; display: flex; flex-wrap: wrap; justify-content: flex-start; }
 
-section footer .active #homeicon3 { color: #8e488e; }
+section.frames footer.footer { /*底部列表当前高亮*/ }
 
-section footer .active .text { color: #8e488e; }
+section.frames footer.footer li.active #homeicon3 { color: #8e488e; }
+
+section.frames footer.footer li.active .text { color: #8e488e; }
 
 /*点击左导航,出现样式*/
-.nobg { background: #f1f5f6; }
+.my_nobg { background: #f1f5f6; }
 
-.color { color: #ff0000; }
+.my_color { color: #ff0000; }
 
 /*ajax数据加载的样式*/
-.a { display: inline-block; width: 23vw; height: 20vh; background: #fff; }
+.my_a { display: inline-block; width: 23vw; height: 20vh; background: #fff; }
 
 .title_a { text-decoration: none; color: #3d3d3d; }
 
-.li { width: 23vw; height: 20vh; background: #fff; display: flex; flex-direction: column; flex: 1; }
+.my_li { width: 23vw; height: 20vh; background: #fff; display: flex; flex-direction: column; flex: 1; }
 
-.img { padding: 1vw; width: 22vw; height: 18vh; }
+.my_img { padding: 1vw; width: 22vw; height: 18vh; }
 
-.p { text-align: center; display: block; width: 24vw; height: 9vh; line-height: 6vh; margin: 0; padding: 0; }
+.my_p { text-align: center; display: block; width: 24vw; height: 9vh; line-height: 6vh; margin: 0; padding: 0; }
