--- a/app/css/perfect.css
+++ b/app/css/perfect.css
@@ -4,40 +4,40 @@ body, html { list-style: none; height: auto; margin: 0 auto; padding: 0; }
 
 ul { list-style: none; height: auto; margin: 0; padding: 0; }
 
-section { /*头部大框架*/ height: auto; width: 95vw; overflow: hidden; }
+section.frame { /*头部大框架*/ height: auto; width: 95vw; overflow: hidden; }
 
-section article { /*内容*/ padding-top: 13vh; width: 90vw; height: 400px; margin-left: 9%; }
+section.frame article.content { /*内容*/ padding-top: 13vh; width: 90vw; height: 400px; margin-left: 9%; }
 
-section article p { margin: 0; padding: 0; }
+section.frame article.content p { margin: 0; padding: 0; }
 
-section article p.user { /*昵称*/ width: 100vw; height: 34px; text-align: center; overflow: hidden; }
+section.frame article.content p.user { /*昵称*/ width: 100vw; height: 34px; text-align: center; overflow: hidden; }
 
-section article p.user span { display: inline-block; width: 20%; height: 32px; background: #eeeeee; border: 1px solid #cccccc; border-top-left-radius: 5px; border-bottom-left-radius: 5px; color: #555555; font-size: 14px; text-align: center; line-height: 32px; margin: 0; padding: 0; float: left; }
+section.frame article.content p.user span.nickname { display: inline-block; width: 20%; height: 32px; background: #eeeeee; border: 1px solid #cccccc; border-top-left-radius: 5px; border-bottom-left-radius: 5px; color: #555555; font-size: 14px; text-align: center; line-height: 32px; margin: 0; padding: 0; float: left; }
 
-section article p.user input#username { /*输入框*/ display: inline-block; min-width: 62%; height: 32px; background: #eeeeee; border: 1px solid #cccccc; color: #555555; font-size: 14px; line-height: 32px; margin: 0; padding: 0; float: left; }
+section.frame article.content p.user input#username { /*输入框*/ display: inline-block; min-width: 62%; height: 32px; background: #eeeeee; border: 1px solid #cccccc; color: #555555; font-size: 14px; line-height: 32px; margin: 0; padding: 0; float: left; }
 
-section article p.tel { /*手机号码*/ width: 100vw; height: 35px; text-align: center; margin-top: 10px; overflow: hidden; }
+section.frame article.content p.tel { /*手机号码*/ width: 100vw; height: 35px; text-align: center; margin-top: 10px; overflow: hidden; }
 
-section article p.tel span { display: inline-block; width: 20%; height: 32px; background: #eeeeee; border: 1px solid #cccccc; border-top-left-radius: 5px; border-bottom-left-radius: 5px; color: #555555; font-size: 14px; text-align: center; line-height: 32px; margin: 0; padding: 0; float: left; }
+section.frame article.content p.tel span.phone { display: inline-block; width: 20%; height: 32px; background: #eeeeee; border: 1px solid #cccccc; border-top-left-radius: 5px; border-bottom-left-radius: 5px; color: #555555; font-size: 14px; text-align: center; line-height: 32px; margin: 0; padding: 0; float: left; }
 
-section article p.tel input#telephone { /*输入框*/ display: inline-block; min-width: 62%; height: 32px; background: #eeeeee; border: 1px solid #cccccc; color: #555555; font-size: 14px; line-height: 32px; margin: 0; padding: 0; float: left; }
+section.frame article.content p.tel input#telephone { /*输入框*/ display: inline-block; min-width: 62%; height: 32px; background: #eeeeee; border: 1px solid #cccccc; color: #555555; font-size: 14px; line-height: 32px; margin: 0; padding: 0; float: left; }
 
-section hgroup.address { /*收货地址*/ width: 100vw; height: 170px; text-align: center; margin-top: 10px; overflow: hidden; }
+section.frame hgroup.address { /*收货地址*/ width: 100vw; height: 170px; text-align: center; margin-top: 10px; overflow: hidden; }
 
-section hgroup.address span { display: inline-block; width: 20%; height: 168px; background: #eeeeee; border: 1px solid #cccccc; border-top-left-radius: 5px; border-bottom-left-radius: 5px; color: #555555; font-size: 14px; text-align: center; line-height: 166px; margin: 0; padding: 0; float: left; }
+section.frame hgroup.address span.receipt { display: inline-block; width: 20%; height: 168px; background: #eeeeee; border: 1px solid #cccccc; border-top-left-radius: 5px; border-bottom-left-radius: 5px; color: #555555; font-size: 14px; text-align: center; line-height: 166px; margin: 0; padding: 0; float: left; }
 
-section hgroup.address p { /*选择框*/ display: inline-flex; flex-direction: column; flex: 3; min-width: 62%; height: 168px; background: #eeeeee; border: 1px solid #cccccc; color: #555555; font-size: 14px; line-height: 32px; margin: 0; padding: 0; float: left; }
+section.frame hgroup.address p.select { /*选择框*/ display: inline-flex; flex-direction: column; flex: 3; min-width: 62%; height: 168px; background: #eeeeee; border: 1px solid #cccccc; color: #555555; font-size: 14px; line-height: 32px; margin: 0; padding: 0; float: left; }
 
-section hgroup.address p input { display: inline-flex; flex-direction: column; min-width: 62%; height: 36px; background: #eeeeee; border: 1px solid #cccccc; border-left: none; border-right: none; color: #555555; font-size: 14px; line-height: 32px; margin: 0; padding: 0 0 0 3px; float: left; }
+section.frame hgroup.address p.select input#list_1, section.frame hgroup.address p.select input#list_2, section.frame hgroup.address p.select input#list_3, section.frame hgroup.address p.select input#txt { display: inline-flex; flex-direction: column; min-width: 62%; height: 36px; background: #eeeeee; border: 1px solid #cccccc; border-left: none; border-right: none; color: #555555; font-size: 14px; line-height: 32px; margin: 0; padding: 0 0 0 3px; float: left; }
 
-section hgroup.address p input#txt { /*具体地址*/ border-bottom: none; height: 58px; }
+section.frame hgroup.address p.select input#txt { /*具体地址*/ border-bottom: none; height: 58px; }
 
-section hgroup.address p :nth-child(1) { border-top: none; border-left: none; }
+section.frame hgroup.address p.select :nth-child(1) { border-top: none; border-left: none; }
 
-section .btn { /*提交按钮*/ width: 82.5vw; height: 34px; margin-top: 20px; background: #8e488e; color: #fff; font-size: 14px; border: none; cursor: pointer; }
+section.frame .btn { /*提交按钮*/ width: 82.5vw; height: 34px; margin-top: 20px; background: #8e488e; color: #fff; font-size: 14px; border: none; cursor: pointer; }
 
-section footer { /*底部列表当前高亮*/ }
+section.frame footer.footer { /*底部列表当前高亮*/ }
 
-section footer .active #homeicon5 { color: #8e488e; }
+section.frame footer.footer .active #homeicon5 { color: #8e488e; }
 
-section footer .active .text { color: #8e488e; }
+section.frame footer.footer .active .text { color: #8e488e; }
